--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700;900&family=Roboto:wght@100;400;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700;900&family=Roboto:wght@100;400;900&family=Ubuntu:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -40,9 +42,10 @@
       * {
         font-family: "Poppins", sans-serif;
         font-family: "Roboto", sans-serif;
+        font-family: "Ubuntu", sans-serif;
       }
     </style>
-    <title>React App</title>
+    <title>Dashboard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
